# CppPluginSystem

./: CMakeLists.txt  LICENSE  Plugin.cpp  main.cpp
PluginSystem/: CMakeLists.txt
PluginSystem/include/PluginSystem/: Plugin.h
PluginSystem/source/: PluginLinux.cpp  PluginShared.cpp
